syntax = "proto3";
option java_package="fr.cyril.customerdataservice.stub";

service CustomerService {
	rpc getAllCustomers(GetAllCustomersRequest) returns (GetAllCustomersResponse);
	rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
	rpc addCustomer(AddCustomerRequest) returns (AddCustomerResponse);
}

message GetAllCustomersRequest{}
message GetAllCustomersResponse{
	repeated Customer customers = 1;
}

message Customer {
	int64 id=1;
	string name=2;
	string email=3;
}

message GetCustomerByIdRequest{
	int64 customerId=1;
}

message GetCustomerByIdResponse{
	Customer customer=1;
}

message AddCustomerRequest {
	CustomerRequest customer=1;
}

message AddCustomerResponse {
	Customer customer=1;
}

message CustomerRequest {
	string name=1;
	string email=2;
}






